@@ -1,0 +1,4 @@
+inline bool DateTime::dst() const
+{
+    return d_tm.tm_isdst == 1;
+}
