@@ -1,0 +1,4 @@
+inline int DateTime::Zone::seconds() const
+{
+    return d_data.zoneSeconds;
+}
