@@ -1,4 +1,0 @@
-inline int DateTime::Zone::zoneShift() const
-{
-    return d_data.zoneShift;
-}
